Add pagination and sorting filters

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,6 @@
-save-interval: 6000
+#in ticks (20 ticks is 1 second, so 20*60*3 = 3600, 3min
+save-interval: 3600
+message:
+  different_world: "&cYou have to be in the same world as the shop!"
 inventory:
   click_command: "tp %player% %shoplocation%"
