--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,6 +6,10 @@ api-version: 1.13
 depend: [PrettySimpleShop]
 commands:
   shopsearch:
-    description: "Search a shop for specific items, "
+    description: "Search a shop for specific items, sorted by name, price, world"
     aliases: [ssearch]
     usage: "§cUsage: §b/ssearch §8[§amaterial§8] §8[§aname§8|§aprice§8|§aworld§8]"
+permissions:
+  pssinfo.search:
+    description: Show all buyable items in a gui
+    default: true
